--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <input type="text" id="input-field" placeholder="Bread">
-        <button id="add-button">Add to cart</button>
+        <div class="container">
+            <img src="/images/cat.png" alt="Cat holding chips in a trolly">
+            <input type="text" id="input-field" placeholder="Bread">
+            <button id="add-button">Add to cart</button>
+        </div>        
         <script src="index.js"></script>
     </body>
 </html>
